--- a/AdvisorAICode/requirements.txt
+++ b/AdvisorAICode/requirements.txt
@@ -1,11 +1,11 @@
-Cython==0.29.36
+cython<3.0.0
+pyyaml==5.4.1
 setuptools==68.0.0
 wheel==0.41.2
 streamlit==1.26.0
 openai==0.28.0
 psycopg2-binary==2.9.9
 Pillow==9.1.0
-pyyaml==5.4.1
 pandas==2.2.2
 numpy==1.26.4
 requests==2.32.3
