--- a/AdvisorAICode/requirements.txt
+++ b/AdvisorAICode/requirements.txt
@@ -1,17 +1,3 @@
-Cython==0.29.36
-setuptools==68.0.0
-wheel==0.41.2
 streamlit==1.26.0
 openai==0.28.0
-psycopg2-binary==2.9.9
-Pillow==9.1.0
-PyYAML==5.4.1
-pandas==2.2.2
-numpy==1.26.4
-requests==2.32.3
-aiohttp==3.10.5
-python-dateutil==2.9.0.post0
-pytz==2024.1
-tzdata==2024.1
-tzlocal==4.3.1
-typing-extensions==4.12.2
+psycopg2-binary
